[gd_scene load_steps=12 format=3 uid="uid://egir73k27y71"]

[ext_resource type="Script" path="res://src/enemies/boss/bullet.gd" id="1_7tvsq"]
[ext_resource type="Texture2D" uid="uid://bf636vl2j7b36" path="res://resources/textures/Enemy/Golem/arm_projectile_glowing.png" id="1_d8vuv"]
[ext_resource type="PackedScene" uid="uid://6qsaq4c7hwg3" path="res://src/utilities/hit_box.tscn" id="2_w8pwj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2ao1"]
size = Vector2(34, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvx42"]
atlas = ExtResource("1_d8vuv")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l2cm"]
atlas = ExtResource("1_d8vuv")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyekh"]
atlas = ExtResource("1_d8vuv")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji5p3"]
atlas = ExtResource("1_d8vuv")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8q76"]
atlas = ExtResource("1_d8vuv")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_77mwm"]
atlas = ExtResource("1_d8vuv")
region = Rect2(200, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_nmmis"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvx42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l2cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyekh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji5p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8q76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77mwm")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Bullet" type="Area2D"]
script = ExtResource("1_7tvsq")

[node name="HitBox" parent="." instance=ExtResource("2_w8pwj")]

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(27, -12.5)
shape = SubResource("RectangleShape2D_m2ao1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nmmis")
frame_progress = 0.305939

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]

[editable path="HitBox"]
